syntax = "proto3";
package pb;
option go_package = "internal/adapters/grpc/pb";

message CreateOrderRequest {
  int64 id = 1;
  float price = 2;
  float tax = 3;
}

message CreateOrderResponse {
  int64 id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
  string created_at = 5;
}

message FindAllOrdersByPageRequest {
  int64 page = 1;
  float limit = 2;
  string sort = 3;
}

message FindAllOrdersByPageResponse {
  repeated FindAllOrdersByPageList orders = 1;
}

message FindAllOrdersByPageList {
  int64 id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
  string created_at = 5;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  rpc FindAllOrdersByPage(FindAllOrdersByPageRequest) returns (FindAllOrdersByPageResponse);
}
